# hs-test-failure-nix

./: README.md  default.nix  myLib.cabal  myLib.nix
test/: test.hs
